  descending score. (Adrien Grand)
  
* GITHUB#12591: Use stable radix sort to speed up the sorting of update terms. (Guo Feng)

Changes in runtime behavior
---------------------

* GITHUB#12569: Prevent concurrent tasks from parallelizing execution further which could cause deadlock
  (Luca Cavanna)

Bug Fixes
---------------------

* GITHUB#11556: HTMLStripCharFilter fails on '>' or '<' characters in attribute values. (Elliot Lin)

Build
---------------------

* GITHUB#12612: Upgrade forbiddenapis to version 3.6 and ASM for APIJAR extraction to 9.6.  (Uwe Schindler)

Other
---------------------
(No changes)

======================== Lucene 9.8.0 =======================

API Changes
---------------------

* GITHUB#12554: Allow FilteredDocIdSetIterator.match(doc) to throw IOException (Gokul Manoj)

* GITHUB#11248: IntBlockPool's SliceReader, SliceWriter, and all int slice functionality are moved out to MemoryIndex.
  (Stefan Vodita)

* GITHUB#12436: Move max vector dims limit to Codec (Mayya Sharipova)

New Features
---------------------

* GITHUB#12380: Introduced LeafCollector#finish, a hook that runs after
  collection has finished running on a leaf. (Adrien Grand)

* LUCENE-8183, GITHUB#9231: Added the abbility to get noSubMatches and noOverlappingMatches in
  HyphenationCompoundWordFilter (Martin Demberger, original from Rupert Westenthaler)

* GITHUB#12434: Add `KnnCollector` to `LeafReader` and `KnnVectorReader` so that custom collection of vector
  search results can be provided. The first custom collector provides `ToParentBlockJoin[Float|Byte]KnnVectorQuery`
  joining child vector documents with their parent documents. (Ben Trent)

* GITHUB#12479: Add new Maximum Inner Product vector similarity function for non-normalized dot-product
  vector search. (Jack Mazanec, Ben Trent)

* GITHUB#12489: Add support for recursive graph bisection, also called
  bipartite graph partitioning, and often abbreviated BP, an algorithm for